fixing scrollbar

--- a/stylesheets/editor.css
+++ b/stylesheets/editor.css
@@ -70,13 +70,25 @@ pre {
     background-color: #F5F5F5;
 }
 
-#style-1::-webkit-scrollbar-thumb {
+#code::-webkit-scrollbar-thumb {
 	width: 6px;
     background-color: #2b2b2b;
 	border-radius: 6px;
 }
 
-#style-1::-webkit-scrollbar-track {
+#code::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #2b2b2b;
+}
+
+#line_numbers {
+    overflow : hidden;
+    left     : 0;
+}
+
+#code {
+    left       : 50%;
+    overflow   : auto;
+    overflow-x : hidden;
+    overflow-y : auto;
 }
